# strato-mcp-zotero

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: autotag.yml  docker-publish.yml  python-checks.yml
src/zotero_mcp/: __init__.py  config.py  server.py
src/zotero_mcp/tools/: __init__.py  collections.py  items.py  library.py  schema.py
src/zotero_mcp/zotero/: __init__.py  client.py  collections.py  groups.py  items.py  library.py  schema.py
tests/: conftest.py  test_config.py  test_items.py  test_tools.py
