[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp"
version = "0.1.0"
description = "MCP server exposing the Zotero Web API as tools for AI assistants"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
zotero-mcp = "zotero_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
